--- a/index.html
+++ b/index.html
@@ -1,32 +1,62 @@
-<!DOCTYPE html> 
-<head> 
-	<title> 
-Lab Exercise :1 
-	</title> 
-</head> 
+<!DOCTYPE html>
 
-<body> 
-	<h1 style="color: Blue"> 
-		Lab Exercise :1 
-	</h1> 
-	
-	<b> 		
-	</b> 
-	
-	<p> 
-		Select one Country from the given options: 
-	<select name="countryCode" id="sel" autofocus><option data-countryCode="GB" value="Norway (+47)" Selected>Norway (+47)</option><option data-countryCode="US" value="UK (+44)">UK (+44)</option><optgroup label="Other countries"><option data-countryCode="DZ" value="Algeria (+213)">Algeria (+213)</option><option data-countryCode="AD" value="Andorra (+376)">Andorra (+376)</option><option data-countryCode="AO" value="Angola (+244)">Angola (+244)</option><option data-countryCode="AI" value="Anguilla (+1264)">Anguilla (+1264)</option><option data-countryCode="AG" value="Barbuda (+1268)">Antigua &amp; Barbuda (+1268)</option><option data-countryCode="AR" value="Argentina (+54)">Argentina (+54)</option><option data-countryCode="AM" value="Armenia (+374)">Armenia (+374)</option><option data-countryCode="AW" value="Aruba (+297)">Aruba (+297)</option><option data-countryCode="AU" value="Australia (+61)">Australia (+61)</option><option data-countryCode="AT" value="Austria (+43)">Austria (+43)</option><option data-countryCode="AZ" value="Azerbaijan (+994)">Azerbaijan (+994)</option><option data-countryCode="BS" value="Bahamas (+1242)">Bahamas (+1242)</option><option data-countryCode="BH" value="Bahrain (+973)">Bahrain (+973)</option><option data-countryCode="BD" value="Bangladesh (+880)">Bangladesh (+880)</option><option data-countryCode="BB" value="Barbados (+1246)">Barbados (+1246)</option><option data-countryCode="BY" value="Belarus (+375)">Belarus (+375)</option><option data-countryCode="BE" value="Belgium (+32)">Belgium (+32)</option><option data-countryCode="BZ" value="Belize (+501)">Belize (+501)</option><option data-countryCode="BJ" value="Benin (+229)">Benin (+229)</option><option data-countryCode="BM" value="Bermuda (+1441)">Bermuda (+1441)</option><option data-countryCode="BT" value="Bhutan (+975)">Bhutan (+975)</option><option data-countryCode="BO" value="Bolivia (+591)">Bolivia (+591)</option><option data-countryCode="BA" value="Bosnia Herzegovina (+387)">Bosnia Herzegovina (+387)</option><option data-countryCode="BW" value="Botswana (+267)">Botswana (+267)</option></optgroup> </select>
-	</p> 
-	
-	<p> 
-		The Phone Code of the option selected is: 
-		<span class="output"></span> :        
-	</p> 
-	
-	<button onclick="getOption()"> 
-		Check 
-	</button> 	
-<script src="app.js" charset="utf-8"></script>
-</body> 
+<head>
+	<title>
+		Lab Exercise :1
+	</title>
+</head>
 
-</html>					 
+<body>
+	<h1 style="color: Blue">
+		Lab Exercise :1
+	</h1>
+
+	<b>
+	</b>
+
+	<p>
+		Select one Country from the given options:
+		<select name="countryCode" id="sel" autofocus>
+			<option data-countryCode="GB" value="Norway (+47)" Selected>Norway (+47)</option>
+			<option data-countryCode="US" value="UK (+44)">UK (+44)</option>
+			<optgroup label="Other countries">
+				<option data-countryCode="DZ" value="Algeria (+213)">Algeria</option>
+				<option data-countryCode="AD" value="Andorra (+376)">Andorra</option>
+				<option data-countryCode="AO" value="Angola (+244)">Angola</option>
+				<option data-countryCode="AI" value="Anguilla (+1264)">Anguilla</option>
+				<option data-countryCode="AG" value="Barbuda (+1268)">Antigua &amp; Barbuda </option>
+				<option data-countryCode="AR" value="Argentina (+54)">Argentina </option>
+				<option data-countryCode="AM" value="Armenia (+374)">Armenia</option>
+				<option data-countryCode="AW" value="Aruba (+297)">Aruba</option>
+				<option data-countryCode="AU" value="Australia (+61)">Australia)</option>
+				<option data-countryCode="AT" value="Austria (+43)">Austria </option>
+				<option data-countryCode="AZ" value="Azerbaijan (+994)">Azerbaijan</option>
+				<option data-countryCode="BS" value="Bahamas (+1242)">Bahamas </option>
+				<option data-countryCode="BH" value="Bahrain (+973)">Bahrain </option>
+				<option data-countryCode="BD" value="Bangladesh (+880)">Bangladesh</option>
+				<option data-countryCode="BB" value="Barbados (+1246)">Barbados </option>
+				<option data-countryCode="BY" value="Belarus (+375)">Belarus </option>
+				<option data-countryCode="BE" value="Belgium (+32)">Belgium</option>
+				<option data-countryCode="BZ" value="Belize (+501)">Belize </option>
+				<option data-countryCode="BJ" value="Benin (+229)">Benin</option>
+				<option data-countryCode="BM" value="Bermuda (+1441)">Bermuda </option>
+				<option data-countryCode="BT" value="Bhutan (+975)">Bhutan </option>
+				<option data-countryCode="BO" value="Bolivia (+591)">Bolivia</option>
+				<option data-countryCode="BA" value="Bosnia Herzegovina (+387)">Bosnia Herzegovina </option>
+				<option data-countryCode="BW" value="Botswana (+267)">Botswana </option>
+			</optgroup>
+		</select>
+	</p>
+
+	<p>
+		The Phone Code of the option selected is:
+		<span class="output"></span> :
+	</p>
+
+	<button onclick="getOption()">
+		Check
+	</button>
+	<script src="app.js" charset="utf-8"></script>
+</body>
+
+</html>
