--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<p>
 		Select one Country from the given options:
 		<select name="countryCode" id="sel" autofocus>
-			<option data-countryCode="GB" value="Norway (+47)" Selected>Norway (+47)</option>
-			<option data-countryCode="US" value="UK (+44)">UK (+44)</option>
+			<option data-countryCode="GB" value="Norway (+47)" Selected>Norway</option>
+			<option data-countryCode="US" value="UK (+44)">UK</option>
 			<optgroup label="Other countries">
 				<option data-countryCode="DZ" value="Algeria (+213)">Algeria</option>
 				<option data-countryCode="AD" value="Andorra (+376)">Andorra</option>
