--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 	<title>
 		Lab Exercise :1
 	</title>
+	<style>
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+	 color:Blue;
+
+   text-align: center;
+}
+</style>
 </head>
 <body>
 	<h1 style="color: Blue">
@@ -46,11 +57,14 @@
 	</p>
 	<p>
 		The Phone Code of the option selected is:
-		<span class="output"></span> :
+		<span class="output"></span>
 	</p>
 	<button onclick="getOption()">
 		Check
 	</button>
 	<script src="app.js" charset="utf-8"></script>
+	<div class="footer">
+  <p>Copyright © 2021 @yousif_201710029</p>
+</div>
 </body>
 </html>
